working fetching address  and no map gp  fix

--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -6,7 +6,8 @@
     "title": "غسيل سيارات متميز",
     "subtitle": "في عتبة بابك",
     "description": "خدمة غسيل سيارات احترافية تأتي إليك. احجز الآن واختبر راحة العناية المتميزة بالسيارات في الكويت.",
-    "cta": "احجز الآن"
+    "cta": "احجز الآن",
+    "additionalInfo": "نحن نستخدم منتجات صديقة للبيئة وتقنيات متقدمة لضمان نظافة لا تشوبها شائبة في كل مرة. فريقنا ذو الخبرة مكرس لتقديم أفضل تجربة للعناية بالسيارات في موقعك."
   },
   "services": {
     "title": "خدماتنا",
