--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -6,7 +6,8 @@
     "title": "Premium Car Wash",
     "subtitle": "At Your Doorstep",
     "description": "Professional car washing service that comes to you. Book now and experience the convenience of premium car care in Kuwait.",
-    "cta": "Book Now"
+    "cta": "Book Now",
+    "additionalInfo": "We use eco-friendly products and advanced techniques to ensure a spotless clean every time. Our experienced team is dedicated to providing the best car care experience right at your location."
   },
   "services": {
     "title": "Our Services",
